changed path of springdoc docs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-springdoc.api-docs.path=/docs
+springdoc.api-docs.path=/api/api-docs
+springdoc.swagger.path=/api/swagger-ui.html
+springdoc.swagger-ui.configUrl=/api/api-docs/swagger-config
